# zap

./: .gitignore  LICENSING.md  LLM.md  README.md  benchmark_test.go  builder.go  consensus_test.go  go.mod  go.sum  local_consensus_test.go  mcp_bench_test.go  memory_bench_test.go  node.go  pq_attestation.go  pq_attestation_test.go  python_interop_test.go  simple_consensus_test.go  zap.go  zap_test.go
bench/: main.go
clienthttp/: clienthttp.go  clienthttp_test.go
examples/agents/: main.go
examples/mcp-bridge/: main.go
mcp/: bridge.go  fuzz_test.go
mdns/: README.md  SPEC.md  pyproject.toml
mdns/ext/: helper.py  native-messaging-host.json
mdns/go/: example_test.go  go.mod  zapmdns.go
mdns/python/: __init__.py
mdns/rust/: Cargo.toml
mdns/rust/examples/: browse_all.rs  publish_kms.rs
mdns/rust/src/: lib.rs
mdns/src/hanzo_zap_mdns/: __init__.py  __main__.py  omni.py
mdns/src/zap_mdns/: __init__.py  __main__.py  discover.py  omni.py
mdns/ts/: install.sh  native-host.js  package.json  tsconfig.json
mdns/ts/src/: index.ts
python/: README.md
python/testdata/: gen_evm_fixture.go  gen_fixture.go  gen_python_fixture.py  gen_schema_fixture.go
python/tests/: test_evm.py  test_roundtrip.py  test_schema.py
python/zap_py/: __init__.py  builder.py  evm.py  reader.py  schema.py  wire.py
queue/: README.md  pyproject.toml
queue/src/hanzo_zap_queue/: __init__.py  __main__.py  queue.py  runner.py
zapclient/: ARCHITECTURE.md  SECURITY.md  client.go  codec.go  iface.go  mdns_discovery.go  server.go  zapclient_test.go
