[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hanzo-zap-queue"
version = "0.1.0"
description = "Durable task queue for long-running ZAP jobs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hanzo AI Inc." }]
dependencies = []

[project.scripts]
hanzo-zap-queue = "hanzo_zap_queue.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
